ported more code to 1.18