@@ -6,25 +6,35 @@ import com.terraformersmc.cinderscapes.block.PolypiteQuartzBlock;
 import com.terraformersmc.cinderscapes.decorator.config.CountSafelistRangeDecoratorConfig;
 import com.terraformersmc.cinderscapes.feature.config.PolypiteQuartzFeatureConfig;
 import com.terraformersmc.cinderscapes.feature.config.SimpleStateFeatureConfig;
+import com.terraformersmc.cinderscapes.feature.config.VegetationFeatureConfig;
 import net.minecraft.block.BlockState;
 import net.minecraft.block.Blocks;
 import net.minecraft.util.Identifier;
 import net.minecraft.util.registry.BuiltinRegistries;
 import net.minecraft.util.registry.Registry;
+import net.minecraft.util.registry.RegistryEntry;
 import net.minecraft.world.gen.CountConfig;
-import net.minecraft.world.gen.decorator.*;
+import net.minecraft.world.gen.decorator.CountNoiseDecoratorConfig;
+import net.minecraft.world.gen.decorator.Decorator;
+import net.minecraft.world.gen.decorator.DepthAverageDecoratorConfig;
+import net.minecraft.world.gen.decorator.RangeDecoratorConfig;
 import net.minecraft.world.gen.feature.ConfiguredFeature;
 import net.minecraft.world.gen.feature.ConfiguredFeatures;
+import net.minecraft.world.gen.feature.DefaultFeatureConfig;
 import net.minecraft.world.gen.feature.Feature;
 import net.minecraft.world.gen.feature.FeatureConfig;
 import net.minecraft.world.gen.feature.OreFeatureConfig;
+import net.minecraft.world.gen.feature.RandomPatchFeatureConfig;
+import net.minecraft.world.gen.feature.ReplaceBlobsFeatureConfig;
 
 import java.util.Arrays;
 import java.util.List;
 
 public final class CinderscapesConfiguredFeatures {
 
-    public static final ConfiguredFeature<?, ?> BLACKSTONE_SHALE_WEEPING_VINES = register("blackstone_shales_weeping_vines", ConfiguredFeatures.WEEPING_VINES.repeat(10));
+    public static void init(){}
+
+    public static final RegistryEntry<ConfiguredFeature<DefaultFeatureConfig, ?>> BLACKSTONE_SHALE_WEEPING_VINES = register("blackstone_shales_weeping_vines", Feature.WEEPING_VINES, FeatureConfig.DEFAULT);
 
     public static final ConfiguredFeature<?, ?> ORE_DEBRIS_LARGE_ASHY_SHOALS = register("ore_debris_large_ashy_shoals", Feature.NO_SURFACE_ORE
             .configure(new OreFeatureConfig(OreFeatureConfig.Rules.BASE_STONE_NETHER, Blocks.ANCIENT_DEBRIS.getDefaultState(), 3))
@@ -44,72 +54,45 @@ public final class CinderscapesConfiguredFeatures {
             .spreadHorizontally()
             .repeat(5)
     );
-    public static final ConfiguredFeature<?, ?> VEGETATION_ASHY_SHOALS = register("vegetation_ashy_shoals",
-            CinderscapesFeatures.VEGETATION
-                    .configure(CinderscapesFeatures.ASHY_SHOALS_VEGETATION_CONFIG)
-                    .decorate(Decorator.COUNT_MULTILAYER.configure(new CountConfig(8)))
+    public static final RegistryEntry<ConfiguredFeature<VegetationFeatureConfig, ?>> VEGETATION_ASHY_SHOALS = register("vegetation_ashy_shoals",
+            CinderscapesFeatures.VEGETATION, CinderscapesFeatures.ASHY_SHOALS_VEGETATION_CONFIG
     );
-    public static final ConfiguredFeature<?, ?> BRAMBLE_BERRY_BUSHES = register("bramble_berry_bushes",
-            Feature.RANDOM_PATCH
-                    .configure(CinderscapesFeatures.BRAMBLE_BERRY_BUSH_CONFIG)
-                    .decorate(ConfiguredFeatures.Decorators.SQUARE_HEIGHTMAP_SPREAD_DOUBLE)
-                    .repeat(8)
+    public static final RegistryEntry<ConfiguredFeature<RandomPatchFeatureConfig, ?>> BRAMBLE_BERRY_BUSHES = register("bramble_berry_bushes",
+            Feature.RANDOM_PATCH, CinderscapesFeatures.BRAMBLE_BERRY_BUSH_CONFIG
     );
 
-    public static final ConfiguredFeature<?, ?> SOUL_SAND_ASHY_SHOALS = register("soul_sand_ashy_shoals",
-            Feature.NETHERRACK_REPLACE_BLOBS.configure(CinderscapesFeatures.SOUL_SAND_REPLACE_CONFIG)
-                    .rangeOf(64)
-                    .spreadHorizontally()
-                    .repeat(5)
-    );
-    public static final ConfiguredFeature<?, ?> SOUL_SOIL_ASHY_SHOALS = register("soul_soil_ashy_shoals", Feature.NETHERRACK_REPLACE_BLOBS.configure(CinderscapesFeatures.SOUL_SOIL_REPLACE_CONFIG)
-            .rangeOf(128)
-            .spreadHorizontally()
-            .repeat(10));
-    public static final ConfiguredFeature<?, ?> GRAVEL_ASHY_SHOALS = register("gravel_ashy_shoals", Feature.NETHERRACK_REPLACE_BLOBS.configure(CinderscapesFeatures.GRAVEL_REPLACE_CONFIG)
-            .rangeOf(128)
-            .spreadHorizontally()
-            .repeat(5)
-    );
+    public static final RegistryEntry<ConfiguredFeature<ReplaceBlobsFeatureConfig, ?>> SOUL_SAND_ASHY_SHOALS = register("soul_sand_ashy_shoals",
+            Feature.NETHERRACK_REPLACE_BLOBS, CinderscapesFeatures.SOUL_SAND_REPLACE_CONFIG);
+    public static final RegistryEntry<ConfiguredFeature<ReplaceBlobsFeatureConfig, ?>> SOUL_SOIL_ASHY_SHOALS = register("soul_soil_ashy_shoals", Feature.NETHERRACK_REPLACE_BLOBS, CinderscapesFeatures.SOUL_SOIL_REPLACE_CONFIG));
+    public static final RegistryEntry<ConfiguredFeature<ReplaceBlobsFeatureConfig, ?>> GRAVEL_ASHY_SHOALS = register("gravel_ashy_shoals", Feature.NETHERRACK_REPLACE_BLOBS, CinderscapesFeatures.GRAVEL_REPLACE_CONFIG);
 
-    public static final ConfiguredFeature<?, ?> ASH_TOP_LAYER = register("ash_top_layer", CinderscapesFeatures.ASH_TOP_LAYER.configure(FeatureConfig.DEFAULT));
+    public static final RegistryEntry<ConfiguredFeature<DefaultFeatureConfig, ?>> ASH_TOP_LAYER = register("ash_top_layer", CinderscapesFeatures.ASH_TOP_LAYER, FeatureConfig.DEFAULT);
 
     private static final List<BlockState> DEAD_TREE_SAFELIST = Arrays.asList(Blocks.NETHERRACK.getDefaultState(), Blocks.GRAVEL.getDefaultState(), CinderscapesBlocks.ASH.getDefaultState(), Blocks.SOUL_SAND.getDefaultState(), Blocks.SOUL_SOIL.getDefaultState());
 
-    public static final ConfiguredFeature<?, ?> DEAD_TREE = register("dead_tree", CinderscapesFeatures.DEAD_TREE.configure(FeatureConfig.DEFAULT).decorate(CinderscapesDecorators.COUNT_FLOOR.configure(new CountSafelistRangeDecoratorConfig(10, 20, 20, 128, DEAD_TREE_SAFELIST))));
+    public static final RegistryEntry<ConfiguredFeature<DefaultFeatureConfig, ?>> DEAD_TREE = register("dead_tree", CinderscapesFeatures.DEAD_TREE, FeatureConfig.DEFAULT);
 
     /******* BLACKSTONE SHALES *********/
 
     // TODO: Up until "repeat(x)" could be refactored into a separate configured feature and reused by both ashy shoals and blackstone shales
-    public static final ConfiguredFeature<?, ?> SOUL_SAND_BLACKSTONE_SHALES = register("soul_sand_blackstone_shales",
-            Feature.NETHERRACK_REPLACE_BLOBS.configure(CinderscapesFeatures.SOUL_SAND_REPLACE_CONFIG)
-                    .rangeOf(64)
-                    .spreadHorizontally()
-                    .repeat(10)
+    public static final RegistryEntry<ConfiguredFeature<ReplaceBlobsFeatureConfig, ?>> SOUL_SAND_BLACKSTONE_SHALES = register("soul_sand_blackstone_shales",
+            Feature.NETHERRACK_REPLACE_BLOBS, CinderscapesFeatures.SOUL_SAND_REPLACE_CONFIG
     );
 
-    public static final ConfiguredFeature<?, ?> SOUL_SOIL_BLACKSTONE_SHALES = register("soul_soil_blackstone_shales",
-            Feature.NETHERRACK_REPLACE_BLOBS.configure(CinderscapesFeatures.SOUL_SOIL_REPLACE_CONFIG)
-                .rangeOf(128)
-                .spreadHorizontally()
-                .repeat(30)
+    public static final RegistryEntry<ConfiguredFeature<ReplaceBlobsFeatureConfig, ?>> SOUL_SOIL_BLACKSTONE_SHALES = register("soul_soil_blackstone_shales",
+            Feature.NETHERRACK_REPLACE_BLOBS, CinderscapesFeatures.SOUL_SOIL_REPLACE_CONFIG
     );
 
-    public static final ConfiguredFeature<?, ?> PATCH_CRIMSON_ROOTS = register("patch_crimson_roots_blackstone_shales",
-            ConfiguredFeatures.PATCH_CRIMSON_ROOTS.repeat(128)
-            // TODO: Does this need spreadHorizontally? Probably not, vanilla doesn't use it
+    public static final List<BlockState> SHALE_SAFELIST = List.of(Blocks.CRIMSON_ROOTS.getDefaultState(), Blocks.NETHERRACK.getDefaultState(), Blocks.BLACKSTONE.getDefaultState(), Blocks.SOUL_SOIL.getDefaultState(), Blocks.SOUL_SAND.getDefaultState());
+
+    public static final RegistryEntry<ConfiguredFeature<SimpleStateFeatureConfig, ?>> SHALES = register("shales",
+            CinderscapesFeatures.SHALE_FEATURE, new SimpleStateFeatureConfig(Blocks.BLACKSTONE.getDefaultState(), SHALE_SAFELIST)
     );
 
-    private static final List<BlockState> SHALE_SAFELIST = Arrays.asList(Blocks.CRIMSON_ROOTS.getDefaultState(), Blocks.NETHERRACK.getDefaultState(), Blocks.BLACKSTONE.getDefaultState(), Blocks.SOUL_SOIL.getDefaultState(), Blocks.SOUL_SAND.getDefaultState());
+    public static final List<BlockState> LAVA_SHALE_SAFELIST = List.of(Blocks.LAVA.getDefaultState());
 
-    public static final ConfiguredFeature<?, ?> SHALES = register("shales",
-            CinderscapesFeatures.SHALE_FEATURE.configure(new SimpleStateFeatureConfig(Blocks.BLACKSTONE.getDefaultState(), SHALE_SAFELIST)).decorate(CinderscapesDecorators.COUNT_FLOOR.configure(new CountSafelistRangeDecoratorConfig(2, 20, 20, 128, SHALE_SAFELIST)))
-    );
-
-    private static final List<BlockState> LAVA_SHALE_SAFELIST = Arrays.asList(Blocks.LAVA.getDefaultState());
-
-    public static final ConfiguredFeature<?, ?> LAVA_SHALES = register("lava_shales",
-            CinderscapesFeatures.SHALE_FEATURE.configure(new SimpleStateFeatureConfig(Blocks.BLACKSTONE.getDefaultState(), SHALE_SAFELIST)).decorate(CinderscapesDecorators.COUNT_FLOOR.configure(new CountSafelistRangeDecoratorConfig(2, 20, 20, 128, LAVA_SHALE_SAFELIST)))
+    public static final RegistryEntry<ConfiguredFeature<SimpleStateFeatureConfig, ?>> LAVA_SHALES = register("lava_shales",
+            CinderscapesFeatures.SHALE_FEATURE, new SimpleStateFeatureConfig(Blocks.BLACKSTONE.getDefaultState(), SHALE_SAFELIST)
     );
 
     /******* LUMINOUS GROVE *********/
@@ -196,6 +179,12 @@ public final class CinderscapesConfiguredFeatures {
     }
 
     private CinderscapesConfiguredFeatures() {
+    }
+
+    private static  <FC extends FeatureConfig, F extends Feature<FC>> RegistryEntry<ConfiguredFeature<FC, ?>> register(String id, F feature, FC config) {
+        Identifier realId = Cinderscapes.id(id);
+        Preconditions.checkState(!BuiltinRegistries.CONFIGURED_FEATURE.getIds().contains(realId), "Duplicate ID: %s", id);
+        return BuiltinRegistries.method_40360(BuiltinRegistries.CONFIGURED_FEATURE, realId.toString(), new ConfiguredFeature<>(feature, config));
     }
 
     private static ConfiguredFeature<?, ?> register(String id, ConfiguredFeature<?, ?> cf) {
